--- a/package.json
+++ b/package.json
@@ -9,19 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@sanity/assist": "^1.1.4",
     "@sanity/vision": "^3.16.7",
+    "@superside-oss/sanity-plugin-copy-paste": "^1.0.3",
     "@types/node": "20.6.2",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
+    "hydra-synth": "^1.3.29",
     "next": "13.4.19",
     "next-sanity": "^5.5.3",
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sanity": "^3.16.7",
+    "sanity-lighthouse-plugin": "^1.1.0",
+    "sanity-plugin-graphiql": "^1.4.5",
+    "sanity-plugin-media": "^2.2.2",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
   },
