--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@sanity/assist": "^1.1.4",
     "@sanity/vision": "^3.16.7",
     "@superside-oss/sanity-plugin-copy-paste": "^1.0.3",
     "@types/node": "20.6.2",
@@ -21,12 +20,12 @@
     "hydra-synth": "^1.3.29",
     "next": "13.4.19",
     "next-sanity": "^5.5.3",
+    "next-themes": "^0.2.1",
     "postcss": "8.4.29",
     "react": "18.2.0",
+    "react-animated-cursor": "^2.8.1",
     "react-dom": "18.2.0",
     "sanity": "^3.16.7",
-    "sanity-lighthouse-plugin": "^1.1.0",
-    "sanity-plugin-graphiql": "^1.4.5",
     "sanity-plugin-media": "^2.2.2",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
