--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
     "hydra-synth": "^1.3.29",
-    "next": "13.4.19",
+    "next": "^13.5.4",
     "next-sanity": "^5.5.3",
     "next-themes": "^0.2.1",
-    "postcss": "8.4.29",
+    "postcss": "^8.4.31",
     "react": "18.2.0",
     "react-animated-cursor": "^2.8.1",
     "react-dom": "18.2.0",
