--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "18.2.0",
     "react-animated-cursor": "^2.8.1",
     "react-dom": "18.2.0",
+    "react-medium-image-zoom": "^5.1.8",
     "sanity": "^3.16.7",
     "sanity-plugin-media": "^2.2.2",
     "tailwindcss": "3.3.3",
