--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "autoprefixer": "10.4.15",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
+    "framer-motion": "^10.16.4",
     "hydra-synth": "^1.3.29",
     "next": "^13.5.4",
     "next-sanity": "^5.5.3",
