--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,18 @@
 {
-	"cSpell.words": ["groq"]
+	"cSpell.words": ["groq"],
+	"editor.defaultFormatter": "esbenp.prettier-vscode",
+	"[csharp]": {
+		"editor.defaultFormatter": "ms-dotnettools.csharp"
+	},
+	"vetur.format.defaultFormatterOptions": {
+		"js-beautify-html": {
+			"wrap_attributes": "force-expand-multiline"
+		},
+		"prettyhtml": {
+			"printWidth": 100,
+			"singleQuote": false,
+			"wrapAttributes": false,
+			"sortAttributes": false
+		}
+	}
 }
