--- a/package.json
+++ b/package.json
@@ -27,13 +27,17 @@
     "react-animated-cursor": "^2.8.1",
     "react-dom": "18.2.0",
     "react-medium-image-zoom": "^5.1.8",
+    "regl": "^2.1.0",
     "sanity": "^3.16.7",
     "sanity-plugin-media": "^2.2.2",
     "tailwindcss": "3.3.3",
+    "three": "^0.158.0",
     "typescript": "5.2.2"
   },
   "devDependencies": {
     "@portabletext/react": "^3.0.7",
+    "@types/three": "^0.158.3",
+    "prettier": "3.1.0",
     "react-icons": "^4.11.0"
   }
 }
