--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   },
   "devDependencies": {
     "@portabletext/react": "^3.0.7",
+    "@tailwindcss/typography": "^0.5.10",
     "@types/three": "^0.158.3",
     "prettier": "3.1.0",
     "react-icons": "^4.11.0"
