--- a/package.json
+++ b/package.json
@@ -9,16 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-navigation-menu": "^1.1.4",
     "@sanity/vision": "^3.16.7",
     "@superside-oss/sanity-plugin-copy-paste": "^1.0.3",
     "@types/node": "20.6.2",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
+    "class-variance-authority": "^0.7.0",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
     "framer-motion": "^10.16.4",
     "hydra-synth": "^1.3.29",
+    "lucide-react": "^0.307.0",
     "next": "^13.5.4",
     "next-sanity": "^5.5.3",
     "next-themes": "^0.2.1",
@@ -30,6 +33,7 @@
     "regl": "^2.1.0",
     "sanity": "^3.16.7",
     "sanity-plugin-media": "^2.2.2",
+    "tailwind-merge": "^2.2.0",
     "tailwindcss": "3.3.3",
     "three": "^0.158.0",
     "typescript": "5.2.2"
