--- a/package.json
+++ b/package.json
@@ -12,13 +12,13 @@
 		"@radix-ui/react-navigation-menu": "^1.1.4",
 		"@sanity/vision": "^3.16.7",
 		"@superside-oss/sanity-plugin-copy-paste": "^1.0.3",
-		"@types/node": "20.11.0",
-		"@types/react": "18.2.47",
-		"@types/react-dom": "18.2.7",
+		"@types/node": "^20.11.0",
+		"@types/react": "^18.2.47",
+		"@types/react-dom": "^18.2.7",
 		"@vercel/speed-insights": "^1.0.2",
-		"autoprefixer": "10.4.15",
+		"autoprefixer": "^10.4.15",
 		"class-variance-authority": "^0.7.0",
-		"eslint": "8.49.0",
+		"eslint": "^8.49.0",
 		"eslint-config-next": "^14.0.4",
 		"framer-motion": "^10.16.4",
 		"hydra-synth": "^1.3.29",
@@ -36,15 +36,15 @@
 		"sanity-plugin-media": "^2.2.2",
 		"sharp": "^0.33.1",
 		"tailwind-merge": "^2.2.0",
-		"tailwindcss": "3.3.3",
+		"tailwindcss": "^3.3.3",
 		"three": "^0.158.0",
-		"typescript": "5.3.3"
+		"typescript": "^5.3.3"
 	},
 	"devDependencies": {
 		"@portabletext/react": "^3.0.7",
 		"@tailwindcss/typography": "^0.5.10",
 		"@types/three": "^0.158.3",
-		"prettier": "3.1.0",
+		"prettier": "^3.1.0",
 		"react-icons": "^4.11.0"
 	}
 }
