--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
 		"regl": "^2.1.0",
 		"sanity": "^3.16.7",
 		"sanity-plugin-media": "^2.2.2",
-		"sharp": "^0.33.2",
+		"sharp": "0.33.1",
 		"tailwind-merge": "^2.2.0",
 		"tailwindcss": "^3.3.3",
 		"typescript": "5.3.3"
