--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
 		"eslint": "^8.49.0",
 		"eslint-config-next": "^14.0.4",
 		"framer-motion": "^10.16.4",
-		"next": "^14.0.4",
+		"next": "^14.1.0",
 		"next-sanity": "^7.0.10",
 		"next-themes": "^0.2.1",
 		"postcss": "^8.4.31",
@@ -31,7 +31,7 @@
 		"regl": "^2.1.0",
 		"sanity": "^3.16.7",
 		"sanity-plugin-media": "^2.2.2",
-		"sharp": "0.33.1",
+		"sharp": "^0.33.1",
 		"tailwind-merge": "^2.2.0",
 		"tailwindcss": "^3.3.3",
 		"typescript": "5.3.3"
