--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"@types/node": "20.11.4",
 		"@types/react": "18.2.48",
 		"@types/react-dom": "^18.2.7",
+		"@vercel/analytics": "^1.1.2",
 		"@vercel/speed-insights": "^1.0.2",
 		"autoprefixer": "^10.4.15",
 		"class-variance-authority": "^0.7.0",
