--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@sanity/ui": "^2.0.7",
 		"@sanity/vision": "^3.16.7",
 		"@superside-oss/sanity-plugin-copy-paste": "^1.0.3",
 		"@types/node": "20.11.4",
@@ -29,6 +30,7 @@
 		"react-animated-cursor": "^2.8.1",
 		"react-dom": "^18.2.0",
 		"react-medium-image-zoom": "^5.1.8",
+		"react-player": "^2.15.0",
 		"regl": "^2.1.0",
 		"sanity": "^3.16.7",
 		"sanity-plugin-media": "^2.2.2",
