--- a/turbo.json
+++ b/turbo.json
@@ -2,8 +2,11 @@
 	"$schema": "https://turbo.build/schema.json",
 	"pipeline": {
 		"build": {
+			"dependsOn": ["^build"],
+
 			"outputs": [".next/**", "!.next/cache/**"]
 		},
 		"type-check": {}
-	}
+	},
+	"globalDependencies": ["tsconfig.json"]
 }
