--- a/package.json
+++ b/package.json
@@ -9,44 +9,52 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@sanity/ui": "^2.0.7",
-    "@sanity/vision": "^3.16.7",
-    "@types/node": "^22.10.5",
+    "@phosphor-icons/react": "^2.1.7",
+    "@sanity/ui": "^2.12.3",
+    "@sanity/vision": "^3.75.0",
+    "@types/node": "^22.13.1",
     "@types/react": "19.0.2",
     "@types/react-dom": "19.0.2",
-    "@vercel/analytics": "^1.1.2",
-    "@vercel/speed-insights": "^1.0.2",
-    "autoprefixer": "^10.4.15",
-    "class-variance-authority": "^0.7.0",
-    "eslint": "^9.17.0",
+    "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
+    "autoprefixer": "^10.4.20",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "eslint": "^9.20.1",
     "eslint-config-next": "15.1.3",
-    "motion": "^11.15.0",
+    "lucide-react": "^0.475.0",
+    "motion": "^11.18.2",
     "next": "15.1.3",
-    "next-sanity": "^9.8.31",
+    "next-sanity": "^9.8.55",
     "next-themes": "^0.4.4",
-    "postcss": "^8.4.31",
+    "postcss": "^8.5.2",
     "react": "^19.0.0",
     "react-animated-cursor": "^2.11.2",
     "react-dom": "^19.0.0",
-    "react-medium-image-zoom": "^5.1.8",
-    "react-player": "^2.15.0",
-    "regl": "^2.1.0",
-    "sanity": "^3.16.7",
-    "sanity-plugin-media": "^2.2.2",
-    "sharp": "^0.33.1",
-    "tailwindcss": "^3.3.3",
-    "typescript": "^5.7.2"
+    "react-medium-image-zoom": "^5.2.13",
+    "react-player": "^2.16.0",
+    "regl": "^2.1.1",
+    "sanity": "^3.75.0",
+    "sanity-plugin-media": "^2.3.2",
+    "sharp": "^0.33.5",
+    "tailwind-merge": "^3.0.1",
+    "tailwindcss": "^3.4.17",
+    "tailwindcss-animate": "^1.0.7",
+    "typescript": "^5.7.3"
   },
   "devDependencies": {
-    "@portabletext/react": "^3.0.7",
-    "@tailwindcss/typography": "^0.5.10",
-    "prettier": "^3.1.0",
-    "react-icons": "^5.0.1"
+    "@portabletext/react": "^3.2.1",
+    "@tailwindcss/typography": "^0.5.16",
+    "prettier": "^3.5.0",
+    "react-icons": "^5.4.0"
   },
   "overrides": {
     "@types/react": "19.0.2",
     "@types/react-dom": "19.0.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
-  }
+  },
+  "trustedDependencies": [
+    "@vercel/speed-insights"
+  ]
 }
