--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@phosphor-icons/react": "^2.1.7",
-    "@sanity/ui": "^2.12.3",
-    "@sanity/vision": "^3.75.0",
-    "@types/node": "^22.13.1",
+    "@sanity/image-url": "^1.1.0",
+    "@sanity/styled-components": "^6.1.13",
+    "@sanity/ui": "^2.15.2",
+    "@sanity/vision": "^3.78.1",
+    "@types/node": "^22.13.9",
     "@types/react": "19.0.2",
     "@types/react-dom": "19.0.2",
     "@vercel/analytics": "^1.5.0",
@@ -20,33 +22,35 @@
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "eslint": "^9.20.1",
+    "esbuild": "^0.25.0",
+    "eslint": "^9.22.0",
     "eslint-config-next": "15.1.3",
     "lucide-react": "^0.475.0",
-    "motion": "^11.18.2",
-    "next": "15.1.3",
-    "next-sanity": "^9.8.55",
+    "motion": "^12.4.10",
+    "next": "^15.2.1",
+    "next-sanity": "^9.9.0",
     "next-themes": "^0.4.4",
-    "postcss": "^8.5.2",
+    "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-animated-cursor": "^2.11.2",
     "react-dom": "^19.0.0",
-    "react-medium-image-zoom": "^5.2.13",
+    "react-medium-image-zoom": "^5.2.14",
     "react-player": "^2.16.0",
     "regl": "^2.1.1",
-    "sanity": "^3.75.0",
-    "sanity-plugin-media": "^2.3.2",
+    "sanity": "^3.78.1",
+    "sanity-plugin-media": "^3.0.1",
     "sharp": "^0.33.5",
-    "tailwind-merge": "^3.0.1",
+    "styled-components": "^6.1.15",
+    "tailwind-merge": "^3.0.2",
     "tailwindcss": "^3.4.17",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "^5.7.3"
+    "typescript": "^5.8.2"
   },
   "devDependencies": {
     "@portabletext/react": "^3.2.1",
     "@tailwindcss/typography": "^0.5.16",
-    "prettier": "^3.5.0",
-    "react-icons": "^5.4.0"
+    "prettier": "^3.5.3",
+    "react-icons": "^5.5.0"
   },
   "overrides": {
     "@types/react": "19.0.2",
