--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
     "@sanity/styled-components": "^6.1.13",
     "@sanity/ui": "^2.15.2",
     "@sanity/vision": "^3.78.1",
+    "@tailwindcss/postcss": "^4.0.12",
     "@types/node": "^22.13.9",
     "@types/react": "19.0.2",
     "@types/react-dom": "19.0.2",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
-    "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "esbuild": "^0.25.0",
@@ -42,7 +42,7 @@
     "sharp": "^0.33.5",
     "styled-components": "^6.1.15",
     "tailwind-merge": "^3.0.2",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "^4.0.12",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.8.2"
   },
