--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "@radix-ui/react-slot": "^1.1.2",
     "@sanity/image-url": "^1.1.0",
     "@sanity/styled-components": "^6.1.13",
-    "@sanity/ui": "^2.15.6",
-    "@sanity/vision": "^3.79.0",
-    "@tailwindcss/postcss": "^4.0.14",
-    "@types/node": "^22.13.10",
+    "@sanity/ui": "^2.15.8",
+    "@sanity/vision": "^3.81.0",
+    "@tailwindcss/postcss": "^4.0.16",
+    "@types/node": "^22.13.13",
     "@types/react": "19.0.2",
     "@types/react-dom": "19.0.2",
     "@vercel/analytics": "^1.5.0",
@@ -24,13 +24,14 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "esbuild": "^0.25.1",
-    "eslint": "^9.22.0",
+    "eslint": "^9.23.0",
     "eslint-config-next": "15.1.3",
     "lucide-react": "^0.475.0",
-    "motion": "^12.5.0",
-    "next": "^15.2.2",
-    "next-sanity": "^9.9.4",
+    "motion": "^12.6.0",
+    "next": "^15.2.4",
+    "next-sanity": "^9.9.5",
     "next-themes": "^0.4.6",
+    "next-view-transitions": "^0.3.4",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-animated-cursor": "^2.11.2",
@@ -38,13 +39,13 @@
     "react-medium-image-zoom": "^5.2.14",
     "react-player": "^2.16.0",
     "regl": "^2.1.1",
-    "sanity": "^3.79.0",
-    "sanity-plugin-media": "^3.0.1",
+    "sanity": "^3.81.0",
+    "sanity-plugin-media": "^3.0.2",
     "sanity-plugin-webhooks-trigger": "^0.3.1",
     "sharp": "^0.33.5",
-    "styled-components": "^6.1.15",
+    "styled-components": "^6.1.16",
     "tailwind-merge": "^3.0.2",
-    "tailwindcss": "^4.0.14",
+    "tailwindcss": "^4.0.16",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.8.2"
   },
