--- a/package.json
+++ b/package.json
@@ -4,32 +4,32 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "next build",
+    "build": "next build --turbopack",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "@phosphor-icons/react": "^2.1.7",
-    "@radix-ui/react-slot": "^1.2.0",
+    "@phosphor-icons/react": "^2.1.8",
+    "@radix-ui/react-slot": "^1.2.2",
     "@sanity/image-url": "^1.1.0",
     "@sanity/styled-components": "^6.1.13",
-    "@sanity/ui": "^2.15.13",
-    "@sanity/vision": "^3.86.1",
-    "@tailwindcss/postcss": "^4.1.4",
-    "@types/node": "^22.15.2",
+    "@sanity/ui": "^2.15.17",
+    "@sanity/vision": "^3.88.3",
+    "@tailwindcss/postcss": "^4.1.7",
+    "@types/node": "^22.15.18",
     "@types/react": "19.0.2",
     "@types/react-dom": "19.0.2",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "esbuild": "^0.25.3",
-    "eslint": "^9.25.1",
+    "esbuild": "^0.25.4",
+    "eslint": "^9.27.0",
     "eslint-config-next": "15.1.3",
     "lucide-react": "^0.475.0",
-    "motion": "^12.9.2",
-    "next": "^15.3.1",
-    "next-sanity": "^9.10.2",
+    "motion": "^12.12.1",
+    "next": "^15.3.2",
+    "next-sanity": "^9.11.1",
     "next-themes": "^0.4.6",
     "next-view-transitions": "^0.3.4",
     "postcss": "^8.5.3",
@@ -39,13 +39,13 @@
     "react-medium-image-zoom": "^5.2.14",
     "react-player": "^2.16.0",
     "regl": "^2.1.1",
-    "sanity": "^3.86.1",
+    "sanity": "^3.88.3",
     "sanity-plugin-media": "^3.0.2",
     "sanity-plugin-webhooks-trigger": "^0.3.1",
     "sharp": "^0.33.5",
-    "styled-components": "^6.1.17",
-    "tailwind-merge": "^3.2.0",
-    "tailwindcss": "^4.1.4",
+    "styled-components": "^6.1.18",
+    "tailwind-merge": "^3.3.0",
+    "tailwindcss": "^4.1.7",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.8.3",
     "usehooks-ts": "^3.1.1"
