--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react": "^19.1.0",
     "react-animated-cursor": "^2.11.2",
     "react-dom": "^19.1.0",
+    "react-hook-form": "^7.56.4",
     "react-medium-image-zoom": "^5.2.14",
     "react-player": "^2.16.0",
     "regl": "^2.1.1",
