--- a/package.json
+++ b/package.json
@@ -5,62 +5,59 @@
   "scripts": {
     "predev": "npm run typegen",
     "prebuild": "npm run typegen",
-    "dev": "next dev --turbopack",
-    "build": "next build --turbopack",
+    "dev": "next dev",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "typegen": "sanity schema extract --path=sanity/extract.json && sanity typegen generate"
   },
   "dependencies": {
-    "@phosphor-icons/react": "^2.1.8",
-    "@radix-ui/react-slot": "^1.2.2",
-    "@sanity/image-url": "^1.1.0",
-    "@sanity/styled-components": "^6.1.13",
-    "@sanity/ui": "^2.15.17",
-    "@sanity/vision": "^3.88.3",
-    "@tailwindcss/postcss": "^4.1.7",
-    "@types/node": "^22.15.18",
-    "@types/react": "19.0.2",
-    "@types/react-dom": "19.0.2",
+    "@phosphor-icons/react": "^2.1.10",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@sanity/ui": "^3.0.6",
+    "@sanity/vision": "^4.3.0",
+    "@tailwindcss/postcss": "^4.1.11",
+    "@types/node": "^24.2.1",
+    "@types/react": "^19.1.9",
+    "@types/react-dom": "^19.1.7",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "esbuild": "^0.25.4",
-    "eslint": "^9.27.0",
-    "eslint-config-next": "15.1.3",
-    "lucide-react": "^0.475.0",
-    "motion": "^12.12.1",
-    "next": "^15.3.2",
-    "next-sanity": "^9.11.1",
+    "esbuild": "^0.25.8",
+    "eslint": "^9.33.0",
+    "eslint-config-next": "15.4.6",
+    "lucide-react": "^0.539.0",
+    "motion": "^12.23.12",
+    "next": "^15.4.6",
+    "next-sanity": "^10.0.10",
     "next-themes": "^0.4.6",
     "next-view-transitions": "^0.3.4",
-    "postcss": "^8.5.3",
-    "react": "^19.1.0",
+    "postcss": "^8.5.6",
+    "react": "^19.1.1",
     "react-animated-cursor": "^2.11.2",
-    "react-dom": "^19.1.0",
-    "react-hook-form": "^7.56.4",
-    "react-medium-image-zoom": "^5.2.14",
-    "react-player": "^2.16.0",
+    "react-dom": "^19.1.1",
+    "react-hook-form": "^7.62.0",
+    "react-medium-image-zoom": "^5.3.0",
+    "react-player": "^3.3.1",
     "regl": "^2.1.1",
-    "sanity": "^3.88.3",
-    "sanity-plugin-media": "^3.0.2",
-    "sanity-plugin-webhooks-trigger": "^0.3.1",
-    "sharp": "^0.33.5",
-    "styled-components": "^6.1.18",
-    "tailwind-merge": "^3.3.0",
-    "tailwindcss": "^4.1.7",
+    "sanity": "^4.3.0",
+    "sanity-plugin-media": "^4.0.0",
+    "sharp": "^0.34.3",
+    "styled-components": "^6.1.19",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss": "^4.1.11",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "^5.8.3",
+    "typescript": "^5.9.2",
     "usehooks-ts": "^3.1.1"
   },
   "devDependencies": {
     "@portabletext/react": "^3.2.1",
     "@tailwindcss/typography": "^0.5.16",
-    "prettier": "^3.5.3",
+    "prettier": "^3.6.2",
     "react-icons": "^5.5.0"
   },
   "trustedDependencies": [
-    "@vercel/speed-insights"
+    "@vercel/analytics"
   ]
 }
