Refactor ClientPlayer props and update dev script
ClientPlayer now defines local types for ReactPlayer props and supports both 'url' and 'src' properties for video sources. Updated CustomPortableText to use 'src' instead of 'url' for ClientPlayer. Changed the dev script in package.json to use Next.js with Turbopack.

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "predev": "npm run typegen",
     "prebuild": "npm run typegen",
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
